--- a/index.html
+++ b/index.html
@@ -1266,6 +1266,11 @@ do que você precisa??</h2>
 
 <input type="file" id="csvFileInput" accept=".csv" style="display: none;">
 
+<button class="btn btn-outline-danger btn-sm ms-1" onclick="limparImportacaoErrada()" title="Limpar Lixo">
+    <i class="bi bi-trash3-fill"></i> Limpar Lixo
+</button>
+
+
             </div>
 
             <div class="d-flex justify-content-between align-items-center mb-2 px-1">
@@ -1515,7 +1520,7 @@ do que você precisa??</h2>
         self.addEventListener('activate', event => { const cacheWhitelist = [CACHE_NAME]; event.waitUntil( caches.keys().then(cacheNames => { return Promise.all( cacheNames.map(cacheName => { if (cacheWhitelist.indexOf(cacheName) === -1) { return caches.delete(cacheName); } }) ); }) ); });
     </script>
     
-<script src="app.js?v=14" type="module"></script>
+<script src="app.js?v=15" type="module"></script>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
