--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,13 @@ do que você precisa??</h2>
 
             <div id="newBookipContent">
                 <div class="content-card w-100">
-                    <h5 class="form-section-title mb-3"><i class="bi bi-person-lines-fill"></i> Dados do Cliente</h5>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+    <h5 class="form-section-title mb-0"><i class="bi bi-person-lines-fill"></i> Dados do Cliente</h5>
+    <button class="btn btn-sm btn-success" onclick="abrirModalColarZap()" style="border-radius: 20px;">
+        <i class="bi bi-whatsapp"></i> Colar do Zap
+    </button>
+</div>
+
                     <div class="row">
                         <div class="col-md-12 mb-3 position-relative">
                             <label class="form-label">Nome Completo</label>
