--- a/index.html
+++ b/index.html
@@ -1563,13 +1563,13 @@ do que você precisa??</h2>
                 <div class="col-6">
                     <button id="btnPostShare" class="btn btn-dark w-100 p-3 border-secondary">
                         <i class="bi bi-whatsapp fs-2 d-block mb-2 text-success"></i> 
-                        <span class="small text-light">Enviar</span>
+                        <span class="small text-light">Salvar Online</span>
                     </button>
                 </div>
             </div>
 
             <button id="btnNewBookipCycle" class="btn btn-outline-light w-100 py-2 rounded-pill mt-2">
-                <i class="bi bi-plus-lg"></i> Começar Nova Garantia
+                <i class="bi bi-plus-lg"></i>  Sair e Começar Nova Garantia
             </button>
 
         </div>
