--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 
 
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.min.js"></script>
@@ -1435,15 +1434,9 @@ do que você precisa??</h2>
                     <input type="text" class="form-control border-start-0 ps-0" id="clientSearchInput" placeholder="Buscar por nome ou CPF...">
                 </div>
                 
-                <button class="btn btn-outline-success btn-sm" id="btnImportClients" title="Importar CSV">
+                <<button class="btn btn-outline-success btn-sm" id="btnImportClients" title="Importar CSV">
     <i class="bi bi-file-earmark-spreadsheet-fill"></i> Importar
 </button>
-
-<button class="btn btn-warning btn-sm fw-bold mb-3" onclick="unificarClientesDuplicados()">
-    <i class="bi bi-merge"></i> Unificar Duplicados
-</button>
-
-
 
 <input type="file" id="csvFileInput" accept=".csv" style="display: none;">
 
