--- a/index.html
+++ b/index.html
@@ -1660,9 +1660,9 @@ do que você precisa??</h2>
                 </div>
             </div>
 
-            <button id="btnNewBookipCycle" class="btn btn-outline-light w-100 py-2 rounded-pill mt-2">
-                <i class="bi bi-plus-lg"></i>  Sair e Começar Nova Garantia
-            </button>
+        <button id="btnResetSuccess" class="btn btn-outline-light w-100 py-2 rounded-pill mt-2">
+    <i class="bi bi-plus-lg"></i>  Sair e Começar Nova Garantia
+</button>
 
         </div>
     </div>
