--- a/index.html
+++ b/index.html
@@ -622,11 +622,15 @@
         <div class="row mb-3 w-100 justify-content-center">
             <div class="col-12 col-md-6 mb-3">
                 <label class="form-label text-muted small">Maquininha para Taxas</label>
-                <select class="form-select" id="machine5">
-                    <option value="pagbank">PagBank</option>
-                    <option value="infinity">InfinityPay</option>
-                    <option value="valorante">Valorante</option>
-                </select>
+
+<select class="form-select" id="machine5">
+    <option value="pagbank">PagBank</option>
+    <option value="infinity">InfinityPay</option>
+    <option value="valorante">Valorante</option>
+    <option value="nubank">Nubank Link</option>
+</select>
+
+
             </div>
             <div class="col-12 col-md-6 mb-3" id="flagDisplayContainer5" style="display: none;">
                 <label class="form-label text-muted small">Bandeira</label>
@@ -669,7 +673,19 @@
             </div>
             <div class="content-card w-100">
                 <div class="row mb-3 w-100 justify-content-center">
-                    <div class="col-12 col-md-4 mb-3"><label class="form-label">Maquininha</label><select class="form-select" id="machine1"><option value="pagbank">PagBank</option><option value="infinity" selected>InfinityPay</option><option value="valorante">Valorante</option></select></div>
+                    <div class="col-12 col-md-4 mb-3"><label class="form-label">Maquininha</label>
+
+
+<select class="form-select" id="machine1">
+    <option value="pagbank">PagBank</option>
+    <option value="infinity" selected>InfinityPay</option>
+    <option value="valorante">Valorante</option>
+    <option value="nubank">Nubank Link</option>
+</select>
+
+
+
+</div>
                     <div class="col-12 col-md-4 mb-3" id="flagDisplayContainer1" style="display: none;"><label class="form-label">Bandeira</label><button class="btn-flag-display" id="flagDisplayButton1"></button></div>
                     <div class="col-12 col-md-4 mb-3">
                         <label for="installments1" class="form-label d-flex justify-content-between">
@@ -727,7 +743,19 @@
             </div>
             <div class="content-card w-100">
                 <div class="row mb-3 w-100 justify-content-center">
-                    <div class="col-12 col-md-6 mb-3"><label class="form-label">Maquininha</label><select class="form-select" id="machine2"><option value="pagbank">PagBank</option><option value="infinity">InfinityPay</option><option value="valorante">Valorante</option></select></div>
+                    <div class="col-12 col-md-6 mb-3"><label class="form-label">Maquininha</label>
+
+
+<select class="form-select" id="machine2">
+    <option value="pagbank">PagBank</option>
+    <option value="infinity">InfinityPay</option>
+    <option value="valorante">Valorante</option>
+    <option value="nubank">Nubank Link</option>
+</select>
+
+
+
+</div>
                     <div class="col-12 col-md-6 mb-3" id="flagDisplayContainer2" style="display: none;"><label class="form-label">Bandeira</label><button class="btn-flag-display" id="flagDisplayButton2"></button></div>
                 </div>
                 <div id="brand2Container" class="hidden"><select id="brand2"><option value="visa">Visa</option><option value="mastercard">Mastercard</option><option value="hiper">Hiper</option><option value="hipercard">Hipercard</option><option value="elo">Elo</option><option value="amex">Amex</option></select></div>
@@ -775,7 +803,17 @@
                     <input class="form-control form-control-lg" id="emprestimoValue" min="0" placeholder="Ex: 10000" step="0.01" type="number"/>
                 </div>
                 <div class="row mb-3 w-100 justify-content-center">
-                    <div class="col-12 col-md-6 mb-3"><label class="form-label">Maquininha</label><select class="form-select" id="machine4"><option value="pagbank">PagBank</option><option value="infinity">InfinityPay</option><option value="valorante" selected>Valorante</option></select></div>
+                    <div class="col-12 col-md-6 mb-3"><label class="form-label">Maquininha</label>
+
+
+<select class="form-select" id="machine4">
+    <option value="pagbank">PagBank</option>
+    <option value="infinity">InfinityPay</option>
+    <option value="valorante" selected>Valorante</option>
+    <option value="nubank">Nubank Link</option>
+</select>
+
+</div>
                     <div class="col-12 col-md-6 mb-3" id="flagDisplayContainer4" style="display: none;"><label class="form-label">Bandeira</label><button class="btn-flag-display" id="flagDisplayButton4"></button></div>
                 </div>
                 <div id="brand4Container" class="hidden"><select id="brand4"><option value="visa">Visa</option><option value="mastercard">Mastercard</option><option value="hiper">Hiper</option><option value="hipercard">Hipercard</option><option value="elo">Elo</option><option value="amex">Amex</option></select></div>
@@ -824,7 +862,17 @@
                         </button>
                     </div>
                     <div class="row my-3 w-100 justify-content-center">
-                        <div class="col-12 col-md-6 mb-3"><label class="form-label">Maquininha</label><select class="form-select" id="machine3"><option value="pagbank">PagBank</option><option value="infinity">InfinityPay</option><option value="valorante">Valorante</option></select></div>
+                        <div class="col-12 col-md-6 mb-3"><label class="form-label">Maquininha</label>
+
+<select class="form-select" id="machine3">
+    <option value="pagbank">PagBank</option>
+    <option value="infinity">InfinityPay</option>
+    <option value="valorante">Valorante</option>
+    <option value="nubank">Nubank Link</option>
+</select>
+
+
+</div>
                         <div class="col-12 col-md-6 mb-3" id="flagDisplayContainer3" style="display: none;"><label class="form-label">Bandeira</label><button class="btn-flag-display" id="flagDisplayButton3"></button></div>
                     </div>
                     <div id="brand3Container" class="hidden"><select id="brand3"><option value="visa">Visa</option><option value="mastercard">Mastercard</option><option value="hiper">Hiper</option><option value="hipercard">Hipercard</option><option value="elo">Elo</option><option value="amex">Amex</option></select></div>
@@ -967,6 +1015,12 @@
                         <input class="form-check-input visibility-toggle" type="checkbox" role="switch" id="toggle-valorante-visibility" data-machine="valorante" checked>
                         <label class="form-check-label" for="toggle-valorante-visibility">Valorante</label>
                     </div>
+
+<div class="form-check form-switch">
+    <input class="form-check-input visibility-toggle" type="checkbox" role="switch" id="toggle-nubank-visibility" data-machine="nubank" checked>
+    <label class="form-check-label" for="toggle-nubank-visibility">Nubank Link</label>
+</div>
+
                 </div>
             </div>
             <div class="admin-section">
@@ -1166,16 +1220,6 @@ do que você precisa??</h2>
         <div id="areaBookipWrapper" class="container" style="display: none;">
             <div class="section-header">
                 <h3>Garantia (Bookip)</h3>
-<div id="bookipDraftNotice" class="alert alert-warning d-flex justify-content-between align-items-center p-2 mb-3 hidden" style="border-radius: 10px;">
-    <span class="small"><i class="bi bi-hdd-fill"></i> Há um rascunho salvo.</span>
-    <div>
-        <button class="btn btn-sm btn-success py-0" onclick="recuperarRascunhoBookip()" title="Recuperar"><i class="bi bi-arrow-counterclockwise"></i></button>
-        <button class="btn btn-sm btn-danger py-0" onclick="apagarRascunhoBookip()" title="Apagar"><i class="bi bi-trash"></i></button>
-    </div>
-</div>
-
-
-
                 <button aria-label="Voltar" class="btn-back" id="backFromBookipView"><i class="bi bi-arrow-left"></i></button>
             </div>
 
