Update short_name in manifest data

--- a/index.html
+++ b/index.html
@@ -1737,7 +1737,7 @@ do que você precisa??</h2>
         <script type="application/json" id="manifest-data">
         {
             "name": "Central Workcell",
-            "short_name": "CW",
+            "short_name": "Central Workcell",
             "description": "Calculadora de taxas e gerador de contratos para facilitar suas vendas.",
             "start_url": ".",
             "display": "standalone",
