--- a/index.html
+++ b/index.html
@@ -1268,8 +1268,8 @@
 
 
 
-    <div id="contractContainer" class="hidden">
-        
+<div id="contractContainer" class="hidden" style="min-height: 100vh; padding-bottom: 150px;">
+
         <div class="container text-center" id="documentsHome">
             
             <div class="w-100 d-flex justify-content-start mb-2">
