--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
 
 
 
-<div id="contractContainer" class="hidden" style="min-height: 100vh; padding-bottom: 150px;">
+<div id="contractContainer" class="hidden" style="min-height: 100dvh; width: 100%; overflow-y: auto; padding-bottom: 200px; -webkit-overflow-scrolling: touch;">
 
         <div class="container text-center" id="documentsHome">
             
