--- a/index.html
+++ b/index.html
@@ -1267,8 +1267,7 @@
 
 
 
-
-<div id="contractContainer" class="hidden" style="min-height: 100dvh; width: 100%; overflow-y: auto; padding-bottom: 200px; -webkit-overflow-scrolling: touch;">
+<div id="contractContainer" class="hidden" style="min-height: 100vh; padding-bottom: 250px; position: relative;">
 
         <div class="container text-center" id="documentsHome">
             
