--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
 
 
 
-<div id="contractContainer" class="hidden" style="min-height: 100vh; padding-bottom: 250px; position: relative;">
+<div id="contractContainer" class="hidden">
 
         <div class="container text-center" id="documentsHome">
             
