--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@
 
 
 
-<div id="contractContainer" class="hidden" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1;">
+<div id="contractContainer" class="hidden">
 
 
         <div class="container text-center" id="documentsHome">
