--- a/index.html
+++ b/index.html
@@ -1856,10 +1856,11 @@ do que você precisa??</h2>
 
             <div class="row g-2 mb-3">
                 <div class="col-6">
-                    <button id="btnPostPrint" class="btn btn-dark w-100 p-3 border-secondary">
-                        <i class="bi bi-printer-fill fs-2 d-block mb-2 text-primary"></i> 
-                        <span class="small text-light">Imprimir</span>
-                    </button>
+<button id="btnPostPrint" class="btn btn-dark w-100 p-3 border-secondary" onclick="imprimirUniversal()">
+    <i class="bi bi-printer-fill fs-2 d-block mb-2 text-primary"></i> 
+    <span class="small text-light">Imprimir</span>
+</button>
+
                 </div>
                 <div class="col-6">
                     <button id="btnPostShare" class="btn btn-dark w-100 p-3 border-secondary">
