--- a/index.html
+++ b/index.html
@@ -1546,6 +1546,13 @@ do que você precisa??</h2>
                                 <input class="form-check-input check-pagamento" type="checkbox" value="Boleto" id="pagBoleto">
                                 <label class="form-check-label" for="pagBoleto">Boleto</label>
                             </div>
+<div class="form-check">
+    <input class="form-check-input check-pagamento" type="checkbox" value="Troca" id="pagTroca">
+    <label class="form-check-label" for="pagTroca">Troca</label>
+</div>
+
+
+
                         </div>
                     </div>
 
