--- a/index.html
+++ b/index.html
@@ -1870,24 +1870,18 @@ do que você precisa??</h2>
         <div class="popup-backdrop"></div> <div class="popup-card">           <div class="mb-4">
                 <i class="bi bi-check-circle-fill text-success" style="font-size: 3.5rem;"></i>
                 <h4 class="mt-2 fw-bold text-light">Sucesso!</h4>
-                <p class="text-secondary small">Documento salvo e seguro.</p>
+                <p class="text-secondary small">Garantia já salva na Nuvem.</p>
             </div>
 
             <div class="row g-2 mb-3">
-                <div class="col-6">
-<button id="btnPostPrint" class="btn btn-dark w-100 p-3 border-secondary" onclick="imprimirUniversal()">
-    <i class="bi bi-printer-fill fs-2 d-block mb-2 text-primary"></i> 
-    <span class="small text-light">Imprimir</span>
-</button>
+    <div class="col-12">
+        <button id="btnPostShare" class="btn btn-dark w-100 p-3 border-secondary">
+            <i class="bi bi-whatsapp fs-2 d-block mb-2 text-success"></i> 
+            <span class="small text-light">Gerar documento & enviar </span>
+        </button>
+    </div>
+</div>
 
-                </div>
-                <div class="col-6">
-                    <button id="btnPostShare" class="btn btn-dark w-100 p-3 border-secondary">
-                        <i class="bi bi-whatsapp fs-2 d-block mb-2 text-success"></i> 
-                        <span class="small text-light">Salvar Online</span>
-                    </button>
-                </div>
-            </div>
 
         <button id="btnResetSuccess" class="btn btn-outline-light w-100 py-2 rounded-pill mt-2">
     <i class="bi bi-plus-lg"></i>  Sair e Começar Nova Garantia
