--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Central Workcell</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#0B1120"/>
+    <meta name="theme-color" id="status-bar-color" content="#0B1120"/>
         <link rel="apple-touch-icon" href="https://i.imgur.com/6Ei51Rg.png">
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Ei51Rg.png">
 
